# Bierzo-TSP

./: README.md  pyproject.toml  report.ipynb
ampl/: tsp.mod
data/: generate_dataset.py
data/instances/: coordinates.csv
heuristics/: christofides.py  two_opt.py
src/bierzo_tsp/: __init__.py
