[project]
name = "bierzo-tsp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "reverdat", email = "arnauperezre@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "amplpy>=0.14.0",
    "scipy>=1.15.1",
    "numpy>=2.2.1",
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
    "matplotlib>=3.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bierzo_tsp"]
